--- a/example/en-GB.yml
+++ b/example/en-GB.yml
@@ -3,3 +3,7 @@ en-GB:
   message:
     welcome: "Hello, %{nickname}!"
     farewell: "It\'s %{time} o\'clock. Good bye, %{nickname}!"
+    friend:
+      zero: "I have no friend."
+      one: "I have a friend."
+      other: "I have %{count} friends."
